[package]
name = "ukmm"
description = "A new mod manager for The Legend of Zelda: Breath of the Wild. Successor to BCML."
authors = ["Caleb Smith <c.smith@tuta.io>"]
edition = "2021"
license = "GPL-3.0-or-later"
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
anyhow_ext = { workspace = true }
dircpy = { workspace = true }
dirs2 = { workspace = true }
eframe = { workspace = true, features = ["glow"] }
flume = { workspace = true }
fs-err = { workspace = true }
join_str = { workspace = true }
jwalk = { workspace = true }
lenient_semver = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true, features = ["serde"] }
rayon = { workspace = true }
rfd = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
smartstring = { workspace = true, features = ["serde"] }
zip = { workspace = true, default-features = false, features = ["deflate"] }

astrolabe = "0.5.1"
egui_commonmark = { version = "0.15.0", features = ["svg", "fetch"] }
egui-notify = "0.14.0"
egui_logger = "0.4.4"
http_req = { version = "^0.9", default-features = false, features = [
    "rust-tls",
] }
image = { version = "0.24.4", features = ["jpeg", "png"] }
open = "3.0.3"
roxmltree = "0.18.0"
uk-content = { path = "crates/uk-content" }
uk-manager = { path = "crates/uk-manager" }
uk-mod = { path = "crates/uk-mod" }
uk-reader = { path = "crates/uk-reader" }
uk-ui = { path = "crates/uk-ui" }
uk-util = { path = "crates/uk-util" }
xflags = "0.3.1"

[build-dependencies]
astrolabe = "0.5.2"

[target.'cfg(windows)'.dependencies]
remove_dir_all = "0.8"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[workspace]
members = [
    "crates/uk-content",
    "crates/uk-content-derive",
    "crates/uk-editor",
    "crates/uk-manager",
    "crates/uk-mod",
    "crates/uk-reader",
    "crates/uk-ui",
    "crates/uk-ui-derive",
    "crates/uk-util",

]

[workspace.package]
version = "0.11.1"

[workspace.dependencies]
anyhow = "1"
anyhow_ext = "0.2.1"
dashmap = "5.4"
dircpy = "0.3.12"
dirs2 = "3"
eframe = { version = "0.27.2", default-features = false }
flume = "0.11.0"
fs-err = "2.9"
indexmap = { version = "2.2.6", features = ["serde"] }
join_str = "0.1.0"
jwalk = "0.8.1"
lenient_semver = { version = "0.4.2", features = ["version_serde"] }
log = "0.4.17"
minicbor-ser = "0.2.0"
once_cell = "1.17.1"
parking_lot = "0.12.1"
path-slash = "0.2.1"
rayon = "1.6"
rfd = "0.11.1"
roead = "0.25.1"
rstb = { version = "0.8.1", features = ["complex", "stable"] }
rustc-hash = "1.1.0"
sanitise-file-name = "1"
serde = "1"
serde_json = "1"
serde_yaml = "0.9.13"
serde_with = "3.0"
smartstring = "1"
thiserror = "1.0.38"
typetag = "0.2.1"
zip = { version = "0.6.2", default-features = false }
zstd = { version = "0.13.1", features = ["experimental"] }
