[package]
name = "ukmm"
description = "A new mod manager for The Legend of Zelda: Breath of the Wild. Successor to BCML."
repository = "https://github.com/GingerAvalanche/ukmm"
authors = ["Caleb Smith <c.smith@tuta.io>", "Ginger Chody <chodness@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
version = { workspace = true }
rust-version = "1.85"

[package.metadata.wix]
upgrade-guid = "0EC50392-193E-4A2B-9322-3CF045D8FCAE"
path-guid = "BC0A4F00-5469-4677-B5F4-61A17A215A27"
license = false
eula = false
name = "U-King Mod Manager"
product-name = "U-King Mod Manager"
product-icon = "assets/ukmm.ico"

[dependencies]
anyhow = { workspace = true }
anyhow_ext = { workspace = true }
dirs2 = { workspace = true }
eframe = { workspace = true, features = ["glow", "x11", "wayland"] }
env_logger = "0.11.3"
flume = { workspace = true }
fs-err = { workspace = true }
join_str = { workspace = true }
jwalk = { workspace = true }
lenient_semver = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true, features = ["serde"] }
rayon = { workspace = true }
rfd = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
smartstring = { workspace = true, features = ["serde"] }
ssilide = "0.2.0"
strfmt = { workspace = true }
zip = { workspace = true, default-features = false, features = ["deflate"] }

astrolabe = "0.5.1"
egui_commonmark = { version = "0.21.0", features = ["svg", "fetch"] }
egui-notify = "0.20.0"
egui_logger = "0.8"
http_req = { version = "^0.12", default-features = false, features = [
    "rust-tls",
] }
image = { version = "0.25.1", features = ["jpeg", "png"] }
mimalloc = { version = "0.1.43", default-features = false }
open = "5.2"
roxmltree = "0.20.0"
rustls = "0.23.12"
shlex = "1.3.0"
uk-content = { path = "crates/uk-content" }
uk-manager = { path = "crates/uk-manager" }
uk-mod = { path = "crates/uk-mod" }
uk-reader = { path = "crates/uk-reader" }
uk-ui = { path = "crates/uk-ui" }
uk-util = { path = "crates/uk-util" }
which = "6.0.3"
xflags = "0.3.1"

[build-dependencies]
astrolabe = "0.5.2"

[target.'cfg(windows)'.dependencies]
remove_dir_all = "0.8"
winreg = "0.52.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[workspace]
members = [
    "crates/uk-content",
    "crates/uk-content-derive",
    "crates/uk-manager",
    "crates/uk-mod",
    "crates/uk-reader",
    "crates/uk-ui",
    "crates/uk-util",

]

[workspace.package]
version = "0.16.0"

[workspace.dependencies]
anyhow = "1"
anyhow_ext = "0.2.1"
dashmap = "6"
dirs2 = "3"
eframe = { version = "0.32", default-features = false }
flume = "0.11.0"
fs-err = "2.9"
include-flate = "0.3.0"
indexmap = { version = "2.2.6", features = ["serde"] }
join_str = "0.1.0"
jwalk = "0.8.1"
lenient_semver = { version = "0.4.2", features = ["version_serde"] }
log = "0.4.17"
minicbor-ser = "0.2.0"
parking_lot = "0.12.1"
path-slash = "0.2.1"
rayon = "1.6"
rfd = "0.14.1"
roead = "1"
rstb = { git = "https://github.com/GingerAvalanche/rstb-rust.git", branch = "chemical", features = ["complex", "botw-data"] }
rustc-hash = "2"
sanitise-file-name = "1"
serde = "1"
serde_json = "1"
serde_yaml = "0.9.13"
serde_with = "3"
smartstring = "1"
strfmt = "0.2.4"
thiserror = "1"
typetag = "0.2.1"
zip = { version = "2.1", default-features = false }
zstd = { version = "0.13.1", features = ["experimental"] }

# Config for 'cargo dist'
[workspace.metadata.dist]
allow-dirty = ["ci", "msi"]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.18.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "macos-13"
x86_64-apple-darwin = "macos-13"
x86_64-unknown-linux-gnu = "ubuntu-22.04"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = true
codegen-units = 2
