[package]
name = "uk-content"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
cow-utils = "0.1.2"
indexmap = "1.8.0"
itertools = "0.10.3"
join_str = "0.1.0"
lexical = "6.1.1"
msyt = { git = "https://github.com/NiceneNerd/msyt", rev = "12e4d95fb6480f445284f37706db7bfa8351dc06" }
once_cell = "1.13.0"
thiserror = "1.0.30"
rstb = "0.3.2"
roead = { version = "0.16.2", features = ["with-serde", "smartstring"] }
rustc-hash = "1.1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.82"
smartstring = { version = "1.0.1", features = ["serde"] }
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
zstd = "0.11.2"
