[package]
name = "uk-manager"
authors = ["Caleb Smith <c.smith@tuta.io>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
base64 = "0.13.0"
dircpy = "0.3.12"
dirs2 = "3.0.1"
enum-iterator = "1.2.0"
fs-err = "2.8.1"
jwalk = "0.6.0"
join_str = "0.1.0"
log = "0.4.17"
once_cell = "1.13.1"
parking_lot = { version = "0.12.1", features = ["serde"] }
rayon = "1.5.3"
roead = "0.18.3"
rustc-hash = "1.1.0"
rstb = { version= "0.4.0", features = ["botw-data"] }
sanitise-file-name = "1.0.0"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
serde_with = "2.0.1"
serde_yaml = "0.9.10"
sevenz-rust = "0.1.1"
smartstring = { version = "1.0.1", features = ["serde"] }
tempfile = "3.3.0"
uk-content = { path = "../uk-content" }
uk-mod = { path = "../uk-mod" }
uk-reader = { path = "../uk-reader" }
zip = { version = "0.6.2", default-features = false, features = ["deflate"]}

[target.'cfg(windows)'.dependencies]
junction = { git = "https://github.com/NiceneNerd/junction" }
remove_dir_all = "0.7.0"
