[package]
name = "uk-mod"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
configparser = "3.0.1"
enum_dispatch = "0.3.8"
fs-err = "2.7.0"
indexmap = "1.8.0"
join_str = "0.1.0"
jwalk = "0.6.0"
log = "0.4.17"
mmap-rs = "0.4.0"
minicbor-ser = "0.2.0"
ouroboros = "0.15.5"
parking_lot = "0.12.1"
path-slash = "0.2.0"
piz = "0.5.1"
rayon = "1.5.3"
roead = { version = "0.18.3", features = ["with-serde"] }
rstb = "0.3.2"
sanitise-file-name = "1.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.10"
smartstring = "1.0.1"
typetag = "0.2.1"
toml = "0.5.9"
uk-content = { path = "../uk-content" }
uk-reader = { path = "../uk-reader" }
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
zip = { version = "0.6.2", default-features = false, features = ["deflate"]}
zstd = "0.11.2"

[dev-dependencies]
tempfile = "3.3.0"
