[package]
name = "uk-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
common-path = "1.0.0"
enum_dispatch = "0.3.8"
join_str = "0.1.0"
moka = "0.9.0"
roead = "0.11.1"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
uk-content = { path = "../uk-content" }
xxhash-rust = { version = "0.8.5", features = ["xxh3"]}
zarchive = "0.1.1"
