[package]
name = "uk-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
# cntx = { path = "../../cntx" } #git = "https://github.com/XorTroll/cntx" }
common-path = "1.0.0"
fs-err = "2.7.0"
join_str = "0.1.0"
moka = "0.9.0"
minicbor-ser = "0.1.3"
roead = { path = "../../roead" }
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
typetag = "0.2.1"
uk-content = { path = "../uk-content" }
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
zarchive = "0.1.1"
