[package]
name = "uk-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
# cntx = { path = "../../cntx" } #git = "https://github.com/XorTroll/cntx" }
common-path = "1.0.0"
fs-err = "2.7.0"
join_str = "0.1.0"
log = "0.4.17"
moka = "0.9.0"
minicbor-ser = "0.1.3"
once_cell = "1.13.1"
parking_lot = { version = "0.12.1", features = ["serde"] }
roead = { version = "0.18.3" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.85"
smartstring = { version = "1.0.1", features = ["serde"] }
thiserror = "1.0.31"
typetag = "0.2.1"
uk-content = { path = "../uk-content" }
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
zarchive = "0.1.1"