[package]
name = "uk-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { git = "https://github.com/NiceneNerd/egui", package = "egui", default-features = false, features = ["color-hex", "persistence"] }
egui_extras = { git = "https://github.com/NiceneNerd/egui", package = "egui_extras", features = ["image", "svg"] }
hex = "0.4.3"
indexmap = "1.9.1"
once_cell = "1.13.1"
rfd = "0.10.0"
roead = { version = "0.16.5", features = ["with-serde", "yaml"] }
rustc-hash = "1.1.0"
serde_yaml = "0.9.13"
smartstring = "1.0.1"
syntect = { version = "5.0.0", default-features = false, features = ["yaml-load", "regex-fancy", "default-themes", "dump-load", "default-syntaxes"] }

[dev-dependencies]
eframe = { git = "https://github.com/NiceneNerd/egui", package = "eframe" }
