[package]
name = "uk-content"
edition = "2021"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
indexmap = { workspace = true }
join_str = { workspace = true }
log = { workspace = true }
roead = { workspace = true, features = ["with-serde", "aamp-names"] }
rustc-hash = { workspace = true }
rstb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smartstring = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

almost = "0.2.0"
itertools = "0.13.0"
lexical = "6.1.1"
lexical-core = "0.8.5"
lighter = "0.1.0"
msyt = { git = "https://github.com/NiceneNerd/msyt", rev = "12e4d95fb6480f445284f37706db7bfa8351dc06" }
uk-content-derive = { path = "../uk-content-derive" }
uk-util = { path = "../uk-util" }