[package]
name = "uk-editor"
edition = "2021"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
eframe = { workspace = true, features = ["glow"] }
flume = { workspace = true }
fs-err = { workspace = true }
jwalk = { workspace = true }
minicbor-ser = { workspace = true }
parking_lot = { workspace = true }
path-slash = { workspace = true }
rfd = { workspace = true }
rayon = { workspace = true }
roead = { workspace = true, features = ["with-serde", "yaml"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

uk-content = { path = "../uk-content", features = ["ui"] }
uk-manager = { path ="../uk-manager" }
uk-mod = { path = "../uk-mod" }
nk-ui = { path = "../nk-ui" }
nk-ui-derive = { path = "../nk-ui-derive" }
nk-util = { path = "../nk-util" }
ron = "0.8.0"
