[package]
name = "uk-editor"
authors = ["Caleb Smith <c.smith@tuta.io>"]
edition = "2021"
publish = false
version.workspace = true

[package.metadata.wix]
upgrade-guid = "53241AAE-2269-4EA6-96E9-E17D464137DA"
path-guid = "E0CA8178-5543-41CD-BCA2-A36FDD406020"
license = false
eula = false

[dependencies]
anyhow = { workspace = true }
eframe = { workspace = true, features = ["glow"] }
flume = { workspace = true }
fs-err = { workspace = true }
jwalk = { workspace = true }
minicbor-ser = { workspace = true }
parking_lot = { workspace = true }
path-slash = { workspace = true }
rfd = { workspace = true }
rayon = { workspace = true }
roead = { workspace = true, features = ["with-serde", "yaml"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

uk-content = { path = "../uk-content", features = ["ui"] }
uk-manager = { path ="../uk-manager" }
uk-mod = { path = "../uk-mod" }
uk-ui = { path = "../uk-ui" }
uk-ui-derive = { path = "../uk-ui-derive" }
uk-util = { path = "../uk-util" }
ron = "0.8.0"
