[package]
name = "uk-manager"
authors = ["Caleb Smith <c.smith@tuta.io>"]
edition = "2021"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
anyhow_ext = { workspace = true }
dashmap = { workspace = true, features = ["rayon"] }
dirs2 = { workspace = true }
fs-err = { workspace = true }
join_str = { workspace = true }
jwalk = { workspace = true }
lenient_semver = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true, features = ["serde"] }
path-slash = { workspace = true }
rayon = { workspace = true }
roead = { workspace = true, features = ["yaml"] }
rstb = { workspace = true, features = ["botw-data"] }
rustc-hash = { workspace = true }
sanitise-file-name = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_with = { workspace = true }
smartstring = { workspace = true, features = ["serde"] }
zip = { workspace = true, default-features = false, features = ["deflate"] }

sevenz-rust = "0.6.0"
split-iter = "0.1.0"
tempfile = "3.3"
uk-content = { path = "../uk-content" }
uk-mod = { path = "../uk-mod" }
uk-reader = { path = "../uk-reader" }
uk-util = { path = "../uk-util" }

[target.'cfg(windows)'.dependencies]
junction = { git = "https://github.com/NiceneNerd/junction" }
remove_dir_all = "0.8.1"
