[package]
name = "uk-mod"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
anyhow_ext = { workspace = true }
dashmap = { workspace = true }
fs-err = { workspace = true }
log = { workspace = true }
indexmap = { workspace = true }
join_str = { workspace = true }
jwalk = { workspace = true }
minicbor-ser = { workspace = true }
parking_lot = { workspace = true }
path-slash = { workspace = true }
rayon = { workspace = true }
roead = { workspace = true, features = ["with-serde"] }
rstb = { workspace = true }
sanitise-file-name = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
smartstring = { workspace = true }
typetag = { workspace = true }
zip = { workspace = true, default-features = false, features = ["deflate"] }
zstd = { workspace = true }

botw-utils = "0.4.1"
configparser = "3.0.1"
enum_dispatch = "0.3.8"
mmap-rs = "0.4.0"
ouroboros = "0.15.5"
piz = "0.5.1"
uk-content = { path = "../uk-content" }
uk-reader = { path = "../uk-reader" }

[dev-dependencies]
env_logger = "0.10.0"
tempfile = "3.3.0"
