[package]
name = "uk-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
dashmap = { workspace = true, features = ["serde"] }
fs-err = { workspace = true }
log = { workspace = true }
join_str = { workspace = true }
minicbor-ser = { workspace = true }
parking_lot = { workspace = true, features = ["serde"] }
roead = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smartstring = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
typetag = { workspace = true }

include-flate = "0.2.0"
moka = "0.10.0"
uk-content = { path = "../uk-content" }
zarchive = "0.2.0"
