[package]
name = "uk-ui"
edition = "2021"
version.workspace = true

[dependencies]
indexmap = { workspace = true }
rfd = { workspace = true }
roead = { workspace = true, features = ["with-serde", "yaml"] }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
smartstring = { workspace = true }

color-hex = "0.2.0"
catppuccin-egui = { git = "https://github.com/NiceneNerd/egui-catppuccin" }
egui = { git = "https://github.com/NiceneNerd/egui", package = "egui", default-features = false, features = ["color-hex", "persistence"] }
egui_dock = { git = "https://github.com/NiceneNerd/egui_dock", features = ["serde"] }
egui_extras = { git = "https://github.com/NiceneNerd/egui", package = "egui_extras", features = ["image", "svg"] }
font-loader = "0.11.0"
hex = "0.4.3"
msyt = { git = "https://github.com/NiceneNerd/msyt", rev = "12e4d95fb6480f445284f37706db7bfa8351dc06" }
once_cell = "1.13.1"
syntect = { version = "5", default-features = false, features = ["yaml-load", "regex-fancy", "default-themes", "dump-load", "default-syntaxes"] }

[dev-dependencies]
eframe = { workspace = true }
